testsuite/tests/typecheck/should_fail/tcfail209a.hs
module TcFail209a where

g :: ((Show a, Num a), Eq a) => a -> a
g = undefined
